--- a/android/app/src/main/res/layout/activity_main_home.xml
+++ b/android/app/src/main/res/layout/activity_main_home.xml
@@ -6,6 +6,12 @@
     <Button
         android:id="@+id/main_button_call"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test server (Call)"/>
+
+    <ToggleButton
+        android:id="@+id/main_message_button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <ScrollView
         android:layout_width="match_parent"
