--- a/android/app/src/main/res/layout/activity_main_home.xml
+++ b/android/app/src/main/res/layout/activity_main_home.xml
@@ -9,6 +9,22 @@
         android:layout_height="wrap_content"
         android:text="Test server (Call)"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Peer IP"/>
+        <EditText
+            android:id="@+id/edit_peer_ip"
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
     <ToggleButton
         android:id="@+id/main_message_button"
         android:layout_width="wrap_content"
