--- a/android/app/src/main/res/layout/activity_main_home.xml
+++ b/android/app/src/main/res/layout/activity_main_home.xml
@@ -25,10 +25,27 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
-    <ToggleButton
-        android:id="@+id/main_message_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ToggleButton
+            android:id="@+id/main_message_button"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/main_clear_button"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="CLEAR"/>
+        <ToggleButton
+            android:id="@+id/main_output_button"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
