update message ui

--- a/desktop/app/index.ejs
+++ b/desktop/app/index.ejs
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>messenger</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <% if (htmlWebpackPlugin.options.appModules) { %>
       <!-- Add `app/node_modules` to global paths so `require` works properly in development -->
       <script>
