--- a/android/app/src/main/res/layout/activity_call.xml
+++ b/android/app/src/main/res/layout/activity_call.xml
@@ -1,18 +1,18 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/content_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
+    android:orientation="vertical"
     tools:context="cn.jackq.messenger.ui.CallActivity">
 
-    <!-- The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc. -->
     <TextView
-        android:id="@+id/fullscreen_content"
+        android:id="@+id/chat_peer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:gravity="center"
         android:keepScreenOn="true"
         android:text="@string/dummy_content"
@@ -23,50 +23,22 @@
         tools:layout_editor_absoluteY="467dp" />
 
     <TextView
+        android:id="@+id/chat_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="32dp"
         android:fontFamily="monospace"
         android:text="00:21:00"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="28sp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"/>
+        android:textSize="28sp" />
 
-    <ImageButton
-        android:id="@+id/imageButton1"
-        style="@style/CallBottomActionButton"
-        android:layout_width="0dp"
+
+    <TextView
+        android:id="@+id/chat_status"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/fullscreen_content_controls"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/ic_media_pause" />
-
-    <ImageButton
-        android:id="@+id/imageButton2"
-        style="@style/CallBottomActionButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/fullscreen_content_controls"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toEndOf="@id/imageButton1"
-        app:srcCompat="@android:drawable/ic_media_pause" />
-
-
-    <ImageButton
-        android:id="@+id/imageButton3"
-        style="@style/CallBottomActionButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/fullscreen_content_controls"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toEndOf="@+id/imageButton2"
-        app:srcCompat="@android:drawable/ic_media_pause" />
-
+        android:layout_gravity="center" />
 
     <LinearLayout
         android:id="@+id/fullscreen_content_controls"
@@ -78,14 +50,22 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <Button
-            android:id="@+id/dummy_button"
+            android:id="@+id/answer_button"
             style="?metaButtonBarButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/dummy_button" />
+            android:text="answer" />
+
+        <Button
+            android:id="@+id/end_button"
+            style="?metaButtonBarButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="end" />
 
     </LinearLayout>
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
