--- a/android/app/src/main/res/layout/activity_chat.xml
+++ b/android/app/src/main/res/layout/activity_chat.xml
@@ -27,18 +27,24 @@
         tools:context="cn.jackq.messenger.ui.ChatActivity">
         <android.support.v7.widget.ListViewCompat
             android:id="@+id/chat_message_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="0dp" />
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:listitem="@layout/list_item_chat"
+            android:layout_marginEnd="0dp" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             tools:layout_editor_absoluteX="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/chat_message_list"
-            android:id="@+id/linearLayout">
+            android:id="@+id/linearLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="0dp"
+            app:layout_constraintBottom_toBottomOf="parent">
             <EditText
                 android:id="@+id/chat_text"
                 android:inputType="text"
