--- a/android/app/src/main/res/layout/list_item_chat.xml
+++ b/android/app/src/main/res/layout/list_item_chat.xml
@@ -2,10 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-
+    android:background="#ff09caff"
+    android:orientation="horizontal">
+    <View
+        android:background="@drawable/ic_notifications_black_24dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp" />
     <LinearLayout
         android:id="@+id/message_view_layout"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
