theme chat page

--- a/android/app/src/main/res/layout/list_item_chat_receive.xml
+++ b/android/app/src/main/res/layout/list_item_chat_receive.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:weightSum="10"
-    android:layout_marginBottom="5dp"
-    android:layout_marginTop="15dp"
+    android:paddingBottom="5dp"
+    android:paddingTop="15dp"
     android:orientation="horizontal">
     <ImageView
         android:layout_width="15dp"
