--- a/android/app/src/main/res/layout/activity_chat.xml
+++ b/android/app/src/main/res/layout/activity_chat.xml
@@ -30,12 +30,22 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-            android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:listitem="@layout/list_item_chat"
-            android:layout_marginEnd="0dp" />
+            tools:listitem="@layout/list_item_chat_receive"
+            android:listSelector="#0000"
+            android:cacheColorHint="#0000"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout2" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="4dp"
+            android:background="@drawable/ic_message_input_separator"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/chat_message_list" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -69,6 +79,6 @@
         android:layout_marginBottom="64dp"
         android:layout_marginRight="16dp"
         android:layout_marginLeft="16dp"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@drawable/ic_call_white_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
