--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#ccc"
     tools:context="cn.jackq.messenger.ui.LoginActivity">
 
     <!-- Login progress -->
@@ -31,7 +32,8 @@
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <LinearLayout
             android:id="@+id/email_login_form"
@@ -39,10 +41,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+            <LinearLayout style="@style/AppTextInputStyle" android:orientation="horizontal">
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="0dp"
@@ -56,13 +55,19 @@
                         android:hint="Host Name"
                         android:inputType="text"
                         android:maxLines="1"
+                        android:textColorHint="#555"
+                        android:background="#0000"
                         android:singleLine="true" />
 
                 </android.support.design.widget.TextInputLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:text=":" android:layout_gravity="bottom" android:layout_marginBottom="10dp"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:padding="3dp"
+                    android:textSize="20sp"
+                    android:text=":" android:layout_gravity="center"/>
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="0dp"
@@ -75,13 +80,13 @@
                         android:hint="Port"
                         android:inputType="number"
                         android:maxLines="1"
+                        android:textColorHint="#555"
+                        android:background="#0000"
                         android:singleLine="true" />
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
 
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <android.support.design.widget.TextInputLayout style="@style/AppTextInputStyle">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/user_name"
@@ -90,13 +95,13 @@
                     android:hint="User Name"
                     android:inputType="text"
                     android:maxLines="1"
+                    android:textColorHint="#555"
+                    android:background="#0000"
                     android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <android.support.design.widget.TextInputLayout style="@style/AppTextInputStyle">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/password"
@@ -106,6 +111,8 @@
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
+                    android:textColorHint="#555"
+                    android:background="#0000"
                     android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
@@ -117,15 +124,18 @@
                 android:layout_height="wrap_content"
                 android:text="Create New Identity" />
 
-            <Button
-                android:id="@+id/email_sign_in_button"
-                style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in"
-                android:textStyle="bold" />
 
         </LinearLayout>
     </ScrollView>
+    <Button
+        android:id="@+id/email_sign_in_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:text="@string/action_sign_in"
+        android:textColor="#c535"
+        android:background="@drawable/ic_button_background"
+        />
 </LinearLayout>
