--- a/android/app/src/main/res/layout/list_item_user.xml
+++ b/android/app/src/main/res/layout/list_item_user.xml
@@ -1,18 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
+    android:clickable="true"
+    android:focusable="true"
+    android:background="@drawable/ic_peer_item_background"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/user_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/user_ip"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical">
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/user_name"
+            android:text="Jack Q"
+            android:layout_width="match_parent"
+            android:paddingStart="20dp"
+            android:paddingEnd="10dp"
+            android:paddingTop="10dp"
+            android:textSize="20sp"
+            android:layout_height="wrap_content" />
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/user_ip"
+            android:text="127.0.0.1"
+            android:paddingStart="20dp"
+            android:paddingEnd="10dp"
+            android:textColor="#a555"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/user_unread"
+        android:text="2"
+        android:textColor="#fff"
+        android:layout_margin="5dp"
+        android:background="@drawable/ic_peer_count_background"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:minWidth="25sp"
+        android:layout_height="25sp"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:layout_gravity="center_horizontal|center_vertical"/>
 </LinearLayout>
