--- a/android/app/src/main/res/layout/list_item_chat_receive.xml
+++ b/android/app/src/main/res/layout/list_item_chat_receive.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:weightSum="10"
@@ -31,15 +32,16 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="20dp"
-            android:text="Sample message form peer within the same environment and same status "/>
+            android:text="@string/sample_message_text"/>
 
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/message_time"
             android:textColor="#999"
             android:textAlignment="center"
-            android:text="2017-05-02 19:33"
             android:layout_marginBottom="5dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="@string/sample_message_time"
+            />
     </LinearLayout>
 </LinearLayout>
