--- a/android/app/src/main/res/layout/list_item_chat_send.xml
+++ b/android/app/src/main/res/layout/list_item_chat_send.xml
@@ -26,7 +26,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="15dp"
-            android:text="Sample message form peer within the same environment and same status "
+            android:text="@string/sample_message_text"
             android:textSize="18sp" />
 
         <android.support.v7.widget.AppCompatTextView
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
-            android:text="2017-05-02 19:33"
+            android:text="@string/sample_message_time"
             android:textAlignment="center"
             android:textColor="#999" />
     </LinearLayout>
