--- a/android/app/src/main/res/layout/list_item_user.xml
+++ b/android/app/src/main/res/layout/list_item_user.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:clickable="true"
     android:focusable="true"
@@ -23,7 +24,8 @@
             android:paddingEnd="10dp"
             android:paddingTop="10dp"
             android:textSize="20sp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText" />
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/user_ip"
             android:text="127.0.0.1"
@@ -31,7 +33,8 @@
             android:paddingEnd="10dp"
             android:textColor="#a555"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText" />
     </LinearLayout>
 
     <android.support.v7.widget.AppCompatTextView
@@ -45,5 +48,6 @@
         android:layout_height="25sp"
         android:textAlignment="center"
         android:gravity="center"
-        android:layout_gravity="center_horizontal|center_vertical"/>
+        android:layout_gravity="center_horizontal|center_vertical"
+        tools:ignore="HardcodedText" />
 </LinearLayout>
