--- a/android/app/src/main/res/menu/main_list_menu.xml
+++ b/android/app/src/main/res/menu/main_list_menu.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_quit" android:title="Quit" />
+    <item android:id="@+id/menu_quit" android:title="@string/main_menu_quit_app" />
 </menu>
