--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#8F51B5</color>
+    <color name="colorPrimaryDark">#603F9F</color>
+    <color name="colorAccent">#DD70a1</color>
 
     <color name="black_overlay">#66000000</color>
 </resources>
